--- a/css/style.css
+++ b/css/style.css
@@ -52,24 +52,34 @@ nav p {
 ul {
   list-style-type: none;
   margin: auto;
+  width: auto;
+  height: auto;
+}
+div {
+  width: auto;
+  height: auto;
 }
 .menu {
+  padding: 0;
   list-style-type: none;
-  display: flex;
+  display: inline-flex;
   justify-content: space-evenly;
-  text-align: center;
-  font: 3em sans-serif;
-  border: 0.2rem solid rgb(255, 255, 251);
+  /* text-align: center; */
+  font: 1.5em sans-serif;
+  /* border: 0.2rem solid rgb(255, 255, 251); */
   margin: 0px;
 }
 .menu li {
-  /* border: 0.2rem solid rgb(38, 38, 38); */
+  display: block;
+  border: 0.2rem solid rgb(38, 38, 38);
   text-align: center;
   width: auto;
   height: 20%;
   margin: 10px;
 }
 .menu li a {
+  width: auto;
+  height: auto;
   text-decoration: none;
   color: rgb(177, 0, 0);
 }
