--- a/css/pages.css
+++ b/css/pages.css
@@ -3,14 +3,48 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(166, 166, 169);
+  background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
+                  url(../img/moncockpit.JPG);
 }
 h1 {
   text-align: center;
   margin: 5%;
-  font: 10em sans-serif;
+  font: 1.2em sans-serif;
 }
 
 #intro {
   margin: 30px;
   text-align: auto;
+}
+
+
+
+
+/* Responsive css */
+/* Add a media query for devices with a maximum width of 360px */
+@media (max-width: 360px) {
+  body {
+    font-size: smaller; /* Reduce the font size for smaller screens */
+    padding: 0; /* Remove the padding */
+  }
+  
+  header {
+    padding: 10px; /* Add some padding to the header */
+  }
+  
+  article {
+    margin-left: 0; /* Remove the margin from the article */
+  }
+  
+  /* Add similar adjustments for other elements as needed */
+}
+
+
+/* Add another media query for devices with a minimum width of 800px */
+@media (min-width: 800px) {
+  body {
+    font-size: larger; /* Increase the font size for larger screens */
+  }
+  
+  /* Add similar adjustments for other elements as needed */
 }
